tests/NormalTests/paczka1/fuzzy1/86447646.err
Error in line 8: A696 A201 85,@
Error in line 12: A696 A201 238,0
Error in line 17: Ers S481 21,8
Error in line 24: Mdsit A696 29,0
Error in line 21: OjOdE2 S481 50,8
Error in line 33: 6xCEr A7 55,4
